fixed error 'returned a non-zero code: 3221226505' when building vb6 container
spoiler: it did not work. We keep getting problems with the process
isolation. We need this because our legacy code uses umlaute in
subs, functions and enums. :(

--- a/vb6/.gitignore
+++ b/vb6/.gitignore
@@ -2,6 +2,13 @@
 $RECYCLE.BIN/
 System Volume Information/
 
+# Azure Devops install media
+vsts-agent-win-*.zip
+
+# hyper-V hard disk
+Virtual Hard Disks/*
+!Virtual Hard Disks/.gitkeep
+
 # vb6 product key
 Key.txt
 
@@ -14,3 +21,10 @@ Key.txt
 
 # log files
 *.log
+
+# secrets
+id_rsa
+id_rsa.pub
+
+# temp files
+temp.*
